<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.welcome.baccalculator.BACCalc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringWeight"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/txtVwWeight"
        android:layout_marginTop="10dp"
        android:layout_alignBottom="@+id/switchGender" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextWeight"
        android:layout_marginLeft="90dp"
        android:hint="Enter Weight"


        android:textSize="15sp"
        android:inputType="number"
        android:maxLength="3" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/stringGender"-->
        <!--android:id="@+id/textViewGender"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginLeft="200dp"-->
         <!--/>-->

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringGender"
        android:id="@+id/switchGender"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="5dp"
        android:textOff="@string/stringFemale"
        android:textOn="@string/stringMale"
        android:showText="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringSave"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/editTextWeight"
        android:layout_alignLeft="@+id/txtVwWeight"
        android:layout_alignStart="@+id/txtVwWeight"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/switchGender"
        android:layout_alignEnd="@+id/switchGender" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringDrinkSize"
        android:id="@+id/textViewDrinkSize"
        android:layout_below="@+id/buttonSave"
        android:layout_alignLeft="@+id/txtVwWeight"
        android:layout_marginTop="50dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSave"
        android:id="@+id/radioGroupDrinkSize"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
android:checkedButton="@+id/radioButton1Oz"
        android:layout_alignRight="@+id/buttonSave"
        android:layout_alignEnd="@+id/buttonSave"
        android:layout_alignLeft="@+id/editTextWeight"
        android:layout_alignStart="@+id/editTextWeight"
        android:paddingLeft="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string1oz"
            android:id="@+id/radioButton1Oz"
            android:padding="5dp"

            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string5oz"
            android:id="@+id/radioButton5oz"
            android:padding="5dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string12oz"
            android:id="@+id/radioButton12oz"
            android:padding="15dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringAlcoholpcnt"
        android:id="@+id/textViewAlcoholpcnt"
        android:layout_alignLeft="@+id/textViewDrinkSize"
        android:layout_alignStart="@+id/textViewDrinkSize"
        android:layout_below="@+id/radioGroupDrinkSize"
        android:layout_toLeftOf="@+id/radioGroupDrinkSize"
        android:layout_toStartOf="@+id/radioGroupDrinkSize"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringAdddrink"
        android:id="@+id/buttonAdddrink"
        android:layout_below="@+id/textViewAlcoholpcnt"
        android:layout_alignLeft="@+id/textViewAlcoholpcnt"
        android:layout_alignStart="@+id/textViewAlcoholpcnt"
        android:layout_marginTop="60dp"
        android:layout_alignRight="@+id/editTextWeight"
        android:layout_alignEnd="@+id/editTextWeight" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringReset"
        android:id="@+id/buttonReset"
        android:layout_alignTop="@+id/buttonAdddrink"
        android:layout_toRightOf="@+id/buttonAdddrink"
        android:layout_alignRight="@+id/radioGroupDrinkSize"
        android:layout_alignEnd="@+id/radioGroupDrinkSize" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:text="@string/stringBACLevel"
        android:id="@+id/textViewBAClevel"

        android:textSize="25sp"
        android:layout_below="@+id/buttonAdddrink"
        android:layout_toRightOf="@+id/textViewDrinkSize"
        android:layout_toEndOf="@+id/textViewDrinkSize"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringYourstatus"
        android:layout_toLeftOf="@+id/buttonReset"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editTextWeight"
        android:layout_alignStart="@+id/editTextWeight"
        android:id="@+id/textViewYourstatus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringBACLevelValue"
        android:id="@+id/textViewBACLevelValue"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/textViewBAClevel"
        android:layout_alignLeft="@+id/switchGender"
        android:layout_alignStart="@+id/switchGender" />

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarAlcohol"
        android:layout_toRightOf="@+id/textViewAlcoholpcnt"
        android:layout_above="@+id/buttonAdddrink"
        android:layout_alignTop="@+id/textViewAlcoholpcnt"

        android:max="@integer/stringMaxProgress"
        android:progress="@integer/stringSeekBarProgress" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAlcoholValue"
        android:layout_centerVertical="true"
        android:layout_below="@id/radioGroupDrinkSize"
        android:layout_toRightOf="@+id/seekBarAlcohol"
        android:layout_toEndOf="@+id/seekBarAlcohol"
        android:text="@string/stringAlcoholPercentValue"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarStatus"
        android:layout_above="@+id/textViewYourstatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonReset"
        android:layout_alignEnd="@+id/buttonReset"
        android:layout_below="@+id/textViewBAClevel"
        android:max="@integer/integerProgressMax" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatusValue"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textViewBACLevelValue"
        android:layout_alignStart="@+id/textViewBACLevelValue"
        android:textColor="@color/primary_text_default_material_dark"
        android:text="Youre Safe"


         />

</RelativeLayout>
